<?xml version="1.0"?>
<package format="2">
  <name>omav_gui</name>
  <version>0.0.0</version>
  <description>
    Simple GUI for experiments or demos.
  </description>

  <maintainer email="maximilian.brunner@mavt.ethz.ch">Maximilian Brunner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
