<?xml version="1.0"?>
<package format="2">
  <name>omav_local_planner</name>
  <version>0.0.0</version>
  <description>
    Create 6-DOF trajectories easily using waypoint lists and some parameters.
  </description>

  <maintainer email="maximilian.brunner@mavt.ethz.ch">Maximilian Brunner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>mav_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rotors_control</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>mav_trajectory_generation</depend>

</package>
